# committee-solver

./: .gitignore  LICENSE  README.md  parse_prefs.py  pyproject.toml  requirements.txt  scheduling_solution.py
