[tool.poetry]
name = "committee-solver"
version = "0.1.0"
description = ""
authors = ["Bryan Ngo <bryanngo@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cvxpy = "^1.3.2"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
